site plan added

--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -58,7 +58,7 @@
       <tr>
         <td class="primary">#076D7F</td>
         <td class="secondary">#245159</td>
-        <td class="accent1">#F3F7F3</td>
+        <td class="accent1">#F8F9F6</td>
         <td class="accent2">#E0F3F3</td>
       </tr>
     </table>
@@ -69,7 +69,7 @@
     <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Think also about which of your colors above you might use for background and font colors. -->
 
     <h4>
-      Heading Font: Molle
+      Heading Font: Playwrite Island
       <!-- change this -->
     </h4>
     <h4>
