--- a/wwr/index.html
+++ b/wwr/index.html
@@ -60,13 +60,13 @@
             <p><a href="site-plan-rafting.html">Site Plan</a></p>
             <p><a href="contactus.html">Contact Us</a></p>
             <div class="social">
-                <a href="https://facebook.com" target="blank">
+                <a href="https://facebook.com" target="_blank">
                     <img src="images/facebook.png" alt="fb icon">
                 </a>
-                <a href="https://x.com" target="blank">
+                <a href="https://x.com" target="_blank">
                     <img src="images/x_logo.png" alt="X icon">
                 </a>
-                <a href="https://instagram.com" target="blank">
+                <a href="https://instagram.com" target="_blank">
                     <img src="images/instagram.png" alt="instagram icon">
                 </a>
             </div>
