Finalize WWR page

--- a/PersonalSite/site-plan-personal.html
+++ b/PersonalSite/site-plan-personal.html
@@ -5,14 +5,14 @@
 <head>
   <meta charset="utf-8" />
   <title>Site Plan</title>
-  <link type="text/css" rel="stylesheet" href="styles/site-plan-rafting.css" />
+  <link type="text/css" rel="stylesheet" href="styles/site-plan-personal.css" />
 </head>
 
 <body>
   <header>
-    <h1>Uncharted Waters Site Plan</h1>
-    <h2>Jill Young</h2>
-    <h2>WDD 130-A2</h2>
+    <h1>Forever Young Genealogy</h1>
+    <h3>Jill Young</h3>
+    <h3>WDD 130-A2</h3>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
   </header>
   <main>
@@ -20,12 +20,12 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>To create an unforgettable white water rafting experience for passionate rafters of every skill level through expert guidance, insider tips, and effortless booking on the best rivers.</p>
+    <p>This website will establish the online presence for Forever Young Genealogy, a Utah-based genealogical research and document retrieval service. It will detail the services offered, highlight expertise in Utah records, and provide a platform for potential clients to contact a genealogist for consultations and research requests. The website aims to attract clients seeking professional assistance with their Utah family history research.</p>
     <!-- change this -->
 
     <h3>Audience</h3>
-    <p>Our target audience includes adventure-seeking individuals and families who appreciate the beauty of nature and enjoy spending time in the outdoors; 
-        who are looking for unique and memorable travel experiences; and who may range from beginner to expert adventurers. 
+    <p>
+      This website is primarily targeted towards individuals and families interested in exploring their Utah ancestry but who may lack the time, resources, or expertise to conduct the research themselves. This includes those living outside of Utah, busy professionals, individuals who have “brick wall” research, and those seeking professional assistance in navigating Utah's genealogical records and repositories. The website also aims to reach those looking for document retrieval services specific to Utah.
     </p>
     <!-- change this -->
 
@@ -53,6 +53,7 @@
         <th>Secondary</th>
         <th>Accent 1</th>
         <th>Accent 2</th>
+        <th>Accent 3</th>
       </tr>
       <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
       <tr>
@@ -60,6 +61,7 @@
         <td class="secondary">#948D7C</td>
         <td class="accent1">#615843</td>
         <td class="accent2">#807968</td>
+        <td class="accent3">#DEDACE</td>
       </tr>
     </table>
 
@@ -69,26 +71,25 @@
     <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Think also about which of your colors above you might use for background and font colors. -->
 
     <h4>
-      Heading Font: Playwrite Island
+      Heading Font: <h2>Fleur De Leah</h2>
       <!-- change this -->
     </h4>
+    <h4>Sub-Heading Font:<h3>Delius Swash Caps</h3></h4>
     <h4>
-      Paragraph Font: Albert Sans
+      Paragraph Font: <p>Chocolate Classical Sans</p>
       <!-- change this -->
     </h4>
     <h3>Normal paragraph example</h3>
     <p>
-      The best Whitewater Rafting in Colorado, Uncharted Waters
-      offers rafting on the Colorado and Roaring Fork Rivers in Glenwood
-      Springs. Since 1974, we have been family owned and operated, rafting the
-      Shoshone section of Glenwood Canyon and beyond.
+      Welcome to Forever Young Genealogy, where we believe every family has a story waiting to be 
+      told.  We're passionate about helping you discover your Utah roots, connecting you with the 
+      fascinating lives of your ancestors.  Our team of experienced researchers is dedicated to 
+      providing personalized service, guiding you through the process of uncovering your family's 
+      unique history in the beautiful state of Utah.
     </p>
     <h3>Colored paragraph example</h3>
     <p class="colored">
-      Trips vary from mild and great for families, to trips exclusively for
-      physically fit and experienced rafters. No matter what type of river
-      adventures you are seeking, Uncharted Waters can make it
-      happen for you.
+      Your Utah story starts here.
     </p>
 
     <!-- ------------------------Step 13------------------------------ -->
