--- a/ForeverYoung/site-plan.html
+++ b/ForeverYoung/site-plan.html
@@ -10,14 +10,14 @@
 
 <body>
   <header>
-    <h1>Forever Young Genealogy</h1>
+    <h1>Forever Young Genealogy Site Plan</h1>
     <h3>Jill Young</h3>
     <h3>WDD 130-A2</h3>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
   </header>
   <main>
-    <!-- ------------------------Steps 2-5------------------------------ -->
-    <hr />
+    <!-- ------------------------Steps 2-3------------------------------ -->
+    <hr>
     <h2>Overview</h2>
     <h3>Purpose</h3>
     <p>This website will establish the online presence for Forever Young Genealogy, a Utah-based genealogical research and document retrieval service. It will detail the services offered, highlight expertise in Utah records, and provide a platform for potential clients to contact a genealogist for consultations and research requests. The website aims to attract clients seeking professional assistance with their Utah family history research.</p>
@@ -29,23 +29,19 @@
     </p>
     <!-- change this -->
 
-    <hr />
+    <hr>
     <h2>Branding</h2>
     <h3>Website Logo</h3>
     <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
     <img src="images/logo.JPG" alt="Logo image" />
-    <hr />
+    <hr>
     <h2>Style Guide</h2>
 
-    <!-- ------------------------Steps 6-9------------------------------ -->
+    <!-- ------------------------Steps 4-8------------------------------ -->
 
     <h3>Color Palette</h3>
     <!--  The colors you choose for a website are one of the most important decisions you will make. Follow the instructions on the activity in Canvas then return and replace the color codes below with the hex color codes (the 6 digit numbers that show at the bottom of each color) for the colors you have chosen below.  You should have at least 2 colors but do not have to fill in all 4 if you do not need them.  -->
 
-    <!-- Copy and paste the URL to your finished palette below. Replace the href value that is there with yours. Make sure to paste it into both the href value and the content text of the <a> tag -->
-    <p>Palette URL:</p>
-    <a href="https://coolors.co/f3f7f3-076d7f-f8f9f6-e0f3f3-245159"
-      target="_blank">https://coolors.co/f3f7f3-076d7f-f8f9f6-e0f3f3-245159</a>
 
     <table class="colors">
       <tr>
@@ -55,7 +51,7 @@
         <th>Accent 2</th>
         <th>Accent 3</th>
       </tr>
-      <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
+       <!-- Switch to the site-plan.css file and change your colors there. -->
       <tr>
         <td class="primary">#625745</td>
         <td class="secondary">#948D7C</td>
@@ -65,7 +61,7 @@
       </tr>
     </table>
 
-    <!-- ------------------------Steps 10-12------------------------------ -->
+    <!-- ------------------------Step 9------------------------------ -->
 
     <h3>Typography</h3>
     <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Think also about which of your colors above you might use for background and font colors. -->
@@ -81,51 +77,107 @@
     </h4>
     <h3>Normal paragraph example</h3>
     <p>
-      Welcome to Forever Young Genealogy, where we believe every family has a story waiting to be 
-      told.  We're passionate about helping you discover your Utah roots, connecting you with the 
-      fascinating lives of your ancestors.  Our team of experienced researchers is dedicated to 
-      providing personalized service, guiding you through the process of uncovering your family's 
-      unique history in the beautiful state of Utah.
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     </p>
     <h3>Colored paragraph example</h3>
     <p class="colored">
-      Your Utah story starts here.
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     </p>
 
-    <!-- ------------------------Step 13------------------------------ -->
+    <!-- ------------------------Step 10------------------------------ -->
 
-    <h3>Navigation</h3>
-    <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. -->
+    <h3>
+      Navigation
+    </h3>
+    <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
     <nav>
       <a href="#">Home</a>
       <a href="#">Page2</a>
-      <a href="#">Contact Us</a>
+      <a href="#">Page3</a>
     </nav>
-    <hr />
-    <h2>Site Map</h2>
+    <hr>
+    <h2>
+      Site Map
+    </h2>
     <div class="sitemap">
-      <div class="sm-home">Home</div>
-      <div class="sm-page2">
-        [Page2]
-        <!-- this page will have a name later -->
+      <div class="sm-home">
+        Home
       </div>
-      <div class="sm-page3">Contact Us</div>
+      <div class="sm-page2">
+        [Page2] <!-- change this -->
+      </div>
+      <div class="sm-page3">
+        [Page3]  <!-- change this -->
+      </div>
 
-      <div class="top">&nbsp;</div>
-      <div class="left">&nbsp;</div>
-      <div class="right">&nbsp;</div>
+      <div class="top">
+        &nbsp;
+      </div>
+      <div class="left">
+        &nbsp;
+      </div>
+      <div class="right">
+        &nbsp;
+      </div>
+
     </div>
-    <hr />
-    <h2>Wireframes</h2>
-    <!-- Create an additional wireframe for your site. List it here below the Home page wireframe. -->
+
+    <!-- --------Content Section -------------- -->
+    <hr>
+    <h2>
+      Content
+    </h2>
+    <h3>Home page</h3>
+    <p>
+      [Written copy for the home page here]
+    </p>
+    <p>Images for the Home page</p>
+      <img src="#" alt="image for homepage">
+      <img src="#" alt="image for homepage">
+
+    </ul>
+    <h3>[Page 2]</h3>
+    <p>
+      [Written copy for the Page 2 here]
+    </p>
+    <p>Images for the Page 2</p>
+      <img src="#" alt="image for page">
+      <img src="#" alt="image for page">
+
+    </ul>
+    <h3>[Page 3]</h3>
+    <p>
+      [Written copy for the Page 3 here]
+    </p>
+    <p>Images for the Page 3</p>
+      <img src="#" alt="image for page3">
+      <img src="#" alt="image for page3">
+
+    </ul>
+    <hr>
+    <h2>
+      Wireframes
+    </h2>
+    <p>
+      Create three wireframes for your site. One for each page and list them here</p>
 
     <h3>Home</h3>
-
-    <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
+    <p>         
+      [Any additional details about home that the wireframe does not make clear]
+    </p>
+    <img src="#" alt="home page wireframe">
 
     <h3>[Page 2]</h3>
+    <p>         
+      [Any additional details about page 2 that the wireframe does not make clear]
+    </p>
+    <img src="#" alt="page 2 wireframe">
 
-    <!-- <img src="#" alt="page 2 wireframe"> -->
+    <h3>[Page 3]</h3>
+    <p>         
+      [Any additional details about page 3 that the wireframe does not make clear]
+    </p>
+    <img src="#" alt="page 3 wireframe">
   </main>
 </body>
 
