--- a/ForeverYoung/site-plan.html
+++ b/ForeverYoung/site-plan.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8" />
   <title>Site Plan</title>
-  <link type="text/css" rel="stylesheet" href="styles/site-plan-personal.css" />
+  <link type="text/css" rel="stylesheet" href="styles/site-plans.css" />
 </head>
 
 <body>
@@ -33,7 +33,7 @@
     <h2>Branding</h2>
     <h3>Website Logo</h3>
     <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-    <img src="images/logo.JPG" alt="Logo image" />
+    <img src="images/logo.jpg" alt="Logo image" />
     <hr>
     <h2>Style Guide</h2>
 
