--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -105,7 +105,7 @@
     <div class="sitemap">
       <div class="sm-home">Home</div>
       <div class="sm-page2">
-        [Page2]
+        Trips
         <!-- this page will have a name later -->
       </div>
       <div class="sm-page3">Contact Us</div>
@@ -122,9 +122,10 @@
 
     <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
 
-    <h3>[Page 2]</h3>
+    <h3>Trips</h3>
 
     <!-- <img src="#" alt="page 2 wireframe"> -->
+    <img src="images/trips_wireframe.png" alt="trips page wireframe" />
   </main>
 </body>
 
