Personal Site Plan Contents

--- a/ForeverYoung/site-plan.html
+++ b/ForeverYoung/site-plan.html
@@ -92,8 +92,8 @@
     <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
     <nav>
       <a href="#">Home</a>
-      <a href="#">Page2</a>
-      <a href="#">Page3</a>
+      <a href="#">Services</a>
+      <a href="#">About Us</a>
     </nav>
     <hr>
     <h2>
@@ -104,10 +104,10 @@
         Home
       </div>
       <div class="sm-page2">
-        [Page2] <!-- change this -->
+        Services <!-- change this -->
       </div>
       <div class="sm-page3">
-        [Page3]  <!-- change this -->
+        About Us  <!-- change this -->
       </div>
 
       <div class="top">
@@ -128,30 +128,56 @@
       Content
     </h2>
     <h3>Home page</h3>
-    <p>
-      [Written copy for the home page here]
+    <p>Heading: Uncover Your Utah Roots
+    </br><br>
+    Sub-Heading: Let Forever Young Genealogy be your guide.
+    </br><br>
+    Body: Have you ever wondered about the lives of your pioneer ancestors who settled in the Utah Valley? Do you feel a pull toward understanding your heritage,
+      but lack the time and expertise to delve into the archives yourself? At Forever Young Genealogy, we understand the yearning and desire to connect with the past and 
+      piece together the stories that make you who you are. We're here to help you bridge the gap, and bring your Utah family history to life!
+     </br><br>
+      Our experienced genealogist specializes in navigating the unique opportunities and challenges of Utah-based genealogy. Based in South Jordan, Utah, we are intimately familiar
+      with the archives, libraries, and historical societies that hold the keys to your family's past. We are not just researching; we're connecting you to your family roots in the very
+      place your ancestors called home. Let us help you connect with your Utah heritage.
+    </br><br>
+    Call to Action: Schedule a Consultation today!</p>
+
     </p>
     <p>Images for the Home page</p>
-      <img src="#" alt="image for homepage">
-      <img src="#" alt="image for homepage">
-
+      <img src="images/june-hansen-K20vwSFuTKU-unsplash.jpg" alt="old photos"> <!----photo by June Hansen on Unsplash -->
+      
+      <img src="images/woman_fam_tree.jpg" alt="Woman working on family tree">
     </ul>
-    <h3>[Page 2]</h3>
+    <h3>Services</h3>
     <p>
-      [Written copy for the Page 2 here]
+      Our Services include:
+    </br><br>
+      1. Genealogical Research: From basic family tree construction to in-depth research, we'll dig into the historical records to uncover the lives of your ancestors. </br>
+      2. Document retrieval: We can obtain vital records such as birth certificates, marriage licenses, death certificates, census records, and military reccords from Utah-based repositories.</br>
+      3. Family History Narratives: We can help you transform your research into a compelling and engaging family history narrative to share with future generations!
     </p>
-    <p>Images for the Page 2</p>
-      <img src="#" alt="image for page">
-      <img src="#" alt="image for page">
-
+    <p>Why choose Forever Young Genealogy?</br>
+      As a Utah-based company, we have access to and have an in-depth knowledge of the state's unique genealogical resources. We work closeley with each client to understand thier needs
+      and goals. Our genealogist is passionate about family history and dedicated to providing accurate and thorough research.
+    </p>
+    <p>Images for the Services Page</p>
+      <img src="images/documents.jpg" alt="old documents"> <!--photo by Pixabay on Pexels-->
+      <img src="images/archive1.jpg" alt="Archives"> <!--photo by Ponomarl on Pexels-->
+      <img src="images/fh_book.jpg" alt="Family with Book"> <!--photo by Vlada Karpovich on Pexels-->
     </ul>
-    <h3>[Page 3]</h3>
+    <h3>About Us</h3>
     <p>
-      [Written copy for the Page 3 here]
+      Headline: Forever Young Genealogy: Your partner in Family history</p>
+    <p> At Forever Young Genealogy, we believe that everyone deserves to know their story. Our mission is to make family history research accessible and enjoyable. 
+      We understand that uncovering your roots can be a challenging endeavor. That's why we strive to provide personalized service, clear communication, and accurate, in-depth research.
     </p>
-    <p>Images for the Page 3</p>
-      <img src="#" alt="image for page3">
-      <img src="#" alt="image for page3">
+    <p>Meet the Genealogist:</br>
+    Hi! I'm Jill, and I am a passionate genealogist located in South Jordan, Utah. I have an Associates Degree in Family History Research and I specilize in Utah-based genealogy.</p>
+    <p>Contact Us: [Include contact information, including phone number, email address, and a contact form.]</p>
+    <p>Images for the About Us page</p>
+
+      <img src="images/photos.jpg" alt="old photographs"> <!--Photo by Roman Kraft on Unsplash-->
+      <img src="images/Profile.jpg" alt="Photo of Jill">
 
     </ul>
     <hr>
