--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -87,14 +87,14 @@
             <section class="dlx_msg">
                 <h2>Conquer the Canyon:</h2>
                 <h3>Six Nights of Raw Beauty</h3>
-                <p>This is the grand daddy of all canyons and the grand daddy of all river trips. You will never forget your visit to the Grand Canyon.</li>
+                <p>This is the grand daddy of all canyons and the grand daddy of all river trips. You will never forget your visit to the Grand Canyon.</p>
                 <p>Grand Canyon river rafting combines world-class whitewater with breathtaking scenery to make one truly unforgettable river experience. The canyon is filled not only with exhilarating whitewater rapids, but with side canyons and ancient indian ruins accessible only by river.</p>
                 <h2>$2,550</h2>
                 <a class='book' href="contactus.html">Book Now</a>
             </section>    
             <section class="dlx-details">
                 <p>The dates listed will be the date that you spend the night in Marble Canyon. The launch date is the following day.</p>
-                <p>2025 Pricing and Dates:
+                <h3>2025 Pricing and Dates:</h3>
                     <ul>
                         <li>April 25 May 8, 15, 22, 25, 29</li> 
                         <li>June 5, 12, 19, 23, 26 </li>
@@ -102,9 +102,9 @@
                         <li>August 7, 14, 21 </li>
                         <li>September 4, 12</li>
                     </ul>        
-                        </p>
-                <p>CLASS I - X: The Grand Canyon uses a unique river rating scale. The rapids in the Canyon are technically rated I - X ( 1 - 10) to accommodate such a wide variety of rapids and river variances. However, most people are familiar with the regular I - V river rating scale, so we often refer to both.</p>
-                </ul></p>
+            
+                <h3>CLASS I - X:</h3> 
+                <p>The Grand Canyon uses a unique river rating scale. The rapids in the Canyon are technically rated I - X ( 1 - 10) to accommodate such a wide variety of rapids and river variances. However, most people are familiar with the regular I - V river rating scale, so we often refer to both.</p>
             </section>
             
         </main>
