Personal Site Update

--- a/ForeverYoung/site-plan.html
+++ b/ForeverYoung/site-plan.html
@@ -144,7 +144,7 @@
 
     </p>
     <p>Images for the Home page</p>
-      <img src="images/june-hansen-K20vwSFuTKU-unsplash.jpg" alt="old photos"> <!----photo by June Hansen on Unsplash -->
+      <img src="images/hero.jpg" alt="old photos"> <!----photo by June Hansen on Unsplash -->
       
       <img src="images/woman_fam_tree.jpg" alt="Woman working on family tree">
     </ul>
