add image hover box

--- a/ForeverYoung/services.html
+++ b/ForeverYoung/services.html
@@ -28,14 +28,28 @@
             <h2>
                 Genealogical Research
             </h2>
-            <img class="research-img" src="images/documents.jpg" alt="old documents">
+            <div class="overlay">
+                <img class="research-img" src="images/documents.jpg" alt="old documents" class="image">
+                <div class="middle">
+                    <div class="button">
+                        <a class="book-button" href="aboutus.html#form">Book Now</a>
+                    </div>
+                </div>
+            </div>
             <p>From basic family tree construction to in-depth research, we'll dig into the historical records to uncover the lives of your ancestors.</p>
         </section>
         <section class="retrieval-card">
             <h2>
                 Document Retrieval
             </h2>
-            <img class="retrieval-img" src="images/archive1.jpg" alt="book shelves">
+            <div class="overlay">
+                <img class="retrieval-img" src="images/archive1.jpg" alt="book shelves" class="image">
+                <div class="middle">
+                    <div class="button">
+                        <a class="book-button" href="aboutus.html#form">Book Now</a>
+                    </div>
+                </div>
+            </div>    
             <p>We can obtain vital records such as birth certificates, marriage licenses, death certificates, census records, and military records from Utah-based repositories.</p>
             <div class="button-box">
                 <a class="action" href="aboutus.html">Schedule a Consultation today!</a>
@@ -45,7 +59,14 @@
             <h2>
                 Family History Narratives
             </h2>
-            <img class="narrative-img" src="images/fh_book.jpg" alt="family reading">
+            <div class="overlay">
+                 <img class="narrative-img" src="images/fh_book.jpg" alt="family reading" class="image">
+                <div class="middle">
+                    <div class="button">
+                        <a class="book-button" href="aboutus.html#form">Book Now</a>
+                    </div>
+                </div>
+            </div>  
             <p>We can help you transform your research into a compelling and engaging family history narrative to share with future generations!</p>
         </section>
         
