--- a/ForeverYoung/services.html
+++ b/ForeverYoung/services.html
@@ -29,7 +29,7 @@
                 Genealogical Research
             </h2>
             <div class="overlay">
-                <img class="research-img" src="images/documents.jpg" alt="old documents" class="image">
+                <img class="research-img" src="images/documents.jpg" alt="old documents">
                 <div class="middle">
                     <div class="button">
                         <a class="book-button" href="aboutus.html#form">Book Now</a>
@@ -43,7 +43,7 @@
                 Document Retrieval
             </h2>
             <div class="overlay">
-                <img class="retrieval-img" src="images/archive1.jpg" alt="book shelves" class="image">
+                <img class="retrieval-img" src="images/archive1.jpg" alt="book shelves">
                 <div class="middle">
                     <div class="button">
                         <a class="book-button" href="aboutus.html#form">Book Now</a>
@@ -60,7 +60,7 @@
                 Family History Narratives
             </h2>
             <div class="overlay">
-                 <img class="narrative-img" src="images/fh_book.jpg" alt="family reading" class="image">
+                 <img class="narrative-img" src="images/fh_book.jpg" alt="family reading">
                 <div class="middle">
                     <div class="button">
                         <a class="book-button" href="aboutus.html#form">Book Now</a>
