update about us page

--- a/ForeverYoung/aboutus.html
+++ b/ForeverYoung/aboutus.html
@@ -26,8 +26,9 @@
             </h1>
             <h2>Your Partner in Family History</h2>
             <img class="headline-img" src="images/photos.jpg" alt="old photo boxes">
-            <p>At Forever Young Genealogy, we believe that everyone deserves to know their story.</p>
-            <p>Our mission is to make family history research accessible and enjoyable.</p><p>We understand that uncovering your roots can be a challenging endeavor. That's why we strive to provide personalized service, clear communication, and accurate, in-depth research.</p>
+            <p>Forever Young Genealogy is committed to unlocking your family's history. We believe everyone has a right to know their story, and we strive to make the journey of discovery accessible and enjoyable for everyone.</p>
+            <p>We recognize that genealogical research can be challenging, often involving intricate records and complex historical data. That's why we offer personalized services tailored to your specific needs, ensuring clear and consistent communication throughout the process. Our focus is on delivering accurate, in-depth research, meticulously examining historical documents, census records, and other resources.</p>
+            <p>Our mission goes beyond simply identifying names and dates. We aim to connect you with the lives of your ancestors, providing a deeper understanding of their experiences and contributions. We're here to help you uncover the stories that shape your identity and preserve them for future generations.</p>
             <div class="button-box">
                 <a class="action" href="aboutus.html#form">Schedule a Consultation today!</a>
             </div>
